Added power status query/mutation

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2018"
 kubos-service = { path = "../../../kubos/services/kubos-service" }
 rust-i2c = { path = "../../../kubos/hal/rust-hal/rust-i2c" }
 radiation-counter-api = { path = "../../apis/radiation-counter-api" }
+# gomspace-p31u-api = { path = "../../apis/gomspace-p31u-api" }
 failure = "0.1.2"
 juniper =  "0.11"
 log = "^0.4.0"
