--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,9 @@ juniper =  "0.11"
 log = "^0.4.0"
 mount = "0.3.0"
 syslog = "4.0"
+
+# [profile.release]
+# lto = true
+# opt-level = "z"
+# panic = "abort"
+# codegen-units = 1
