--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2018"
 
 [dependencies]
 kubos-service = { path = "../../../kubos/services/kubos-service" }
-rust-i2c = { path = "../../../kubos/hal/rust-hal/rust-i2c" }
+rust-i2c = { path = "../../hal/rust-hal/rust-i2c" }
 radiation-counter-api = { path = "../../apis/radiation-counter-api" }
 # gomspace-p31u-api = { path = "../../apis/gomspace-p31u-api" }
 failure = "0.1.2"
