Added config.toml for cross-compiling with Pi on RC

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,14 +5,19 @@ authors = ["BH Cho <byunghoon.cho@gmail.com>, Xueliang <xbai9225@gmail.com>"]
 edition = "2018"
 
 [dependencies]
-kubos-service = { path = "../../../kubos/services/kubos-service" }
-rust-i2c = { path = "../../../kubos/hal/rust-hal/rust-i2c" }
-radiation-counter-api = { path = "../../apis/radiation-counter-api" }
 failure = "0.1.2"
 juniper =  "0.11"
 log = "^0.4.0"
 mount = "0.3.0"
 syslog = "4.0"
+
+kubos-service = { path = "../../../kubos/services/kubos-service" }
+rust-i2c = { path = "../../../kubos/hal/rust-hal/rust-i2c" }
+radiation-counter-api = { path = "../../apis/radiation-counter-api" }
+# kubos-service = { path = "../kubos/services/kubos-service" }
+# rust-i2c = { path = "../kubos/hal/rust-hal/rust-i2c" }
+# radiation-counter-api = { path = "../radiation-counter-api" }
+
 
 [profile.release]
 lto = true
