--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,12 +11,12 @@ log = "^0.4.0"
 mount = "0.3.0"
 syslog = "4.0"
 
-# kubos-service = { path = "../../../kubos/services/kubos-service" }
-# rust-i2c = { path = "../../../kubos/hal/rust-hal/rust-i2c" }
-# radiation-counter-api = { path = "../../apis/radiation-counter-api" }
-kubos-service = { path = "../kubos/services/kubos-service" }
-rust-i2c = { path = "../kubos/hal/rust-hal/rust-i2c" }
-radiation-counter-api = { path = "../radiation-counter-api" }
+kubos-service = { path = "../../../kubos/services/kubos-service" }
+rust-i2c = { path = "../../../kubos/hal/rust-hal/rust-i2c" }
+radiation-counter-api = { path = "../../apis/radiation-counter-api" }
+# kubos-service = { path = "../kubos/services/kubos-service" }
+# rust-i2c = { path = "../kubos/hal/rust-hal/rust-i2c" }
+# radiation-counter-api = { path = "../radiation-counter-api" }
 
 
 [profile.release]
