--- a/config.toml
+++ b/config.toml
@@ -1,15 +1,10 @@
+[radiation-counter-service]
+i2c_bus = "/dev/i2c-0"
+i2c_addr = '0x32'
+udp_socket = '192.168.0.1:8038'
+target = '192.168.0.2:8038'
+
 # Space Segment
 [radiation-counter-service.addr]
 ip = "0.0.0.0"
-port = 8101
-
-[radiation-counter-service.device]
-bus = "/dev/i2c-2"
-addr = 0x31
-
-# Ground Segment
-[radiation-counter-service.ground]
-err_buff_len = 64
-wd_timeout = 1000
-udp_socket = '192.168.0.1:8101'
-target = '192.168.0.2:8101'
+port = 8038
